Minor bug fixes
- fixed task text input value not clearing after closing modal on new day
- added white background to placeholder profile pic
- added word wrap for longer words so they break on task cards instead of extending out of task card on li previews on day cards
- fixed label loading error when no labels have been added yet for new day modal
- extended tooltip text for labels on admin modal

--- a/main.css
+++ b/main.css
@@ -143,12 +143,12 @@ footer > p {
   width: 6vh;
   border-radius: 50%;
   margin-left: 2vh;
-  /* bottom: 0; */
   right: 0;
   top: 2vh;
   position: absolute;
   display: inline-block;
   transition: transform 0.4s;
+  background-color: #fffafb;
 }
 
 .header-user-pic:hover {
@@ -369,11 +369,13 @@ footer > p {
 
 .tasks-preview {
   list-style: none;
+  word-wrap: break-word;
 }
 
 .tasks-preview > li {
   margin: 0 0 2vh 0;
   line-height: 1.8;
+  word-wrap: break-word;
 }
 
 .tasks-preview > li::before {
