--- a/modal-windows.css
+++ b/modal-windows.css
@@ -41,6 +41,7 @@
   background-color: #fffafb;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   border-radius: 6px;
+  word-wrap: break-word;
 }
 
 .modal__header {
@@ -279,6 +280,7 @@ fieldset > .form-btn-container {
   margin: 0;
   padding: 0;
   min-height: 2vh;
+  word-wrap: break-word;
 }
 
 .modal__tasks-container .modal__task {
@@ -290,6 +292,7 @@ fieldset > .form-btn-container {
   font-size: 2vh;
   transition: 0.2s;
   line-height: 1.5;
+  word-wrap: break-word;
 }
 
 .modal__tasks-container .modal__task:hover {
